Bring back publish_dir_mode

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -46,7 +46,7 @@ process {
     withName: 'GUNZIP_.*' {
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -59,7 +59,7 @@ process {
     withName: 'UNTAR_.*|BWA_INDEX|BOWTIE2_BUILD|STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -69,7 +69,7 @@ process {
         ext.args   = '--keep-exon-attrs -F -T'
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -78,7 +78,7 @@ process {
     withName: 'GTF2BED' {
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -87,7 +87,7 @@ process {
     withName: 'CUSTOM_GETCHROMSIZES' {
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -96,7 +96,7 @@ process {
     withName: 'GENOME_BLACKLIST_REGIONS' {
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
@@ -114,12 +114,12 @@ if (!(params.skip_fastqc || params.skip_qc)) {
             publishDir = [
                 [
                     path: { "${params.outdir}/fastqc" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.{html}"
                 ],
                 [
                     path: { "${params.outdir}/fastqc/zips" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.{zip}"
                 ]
             ]
@@ -137,22 +137,22 @@ if (!params.skip_trimming) {
             publishDir = [
                 [
                     path: { "${params.outdir}/trimgalore/fastqc" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.{html}"
                 ],
                 [
                     path: { "${params.outdir}/trimgalore/fastqc/zips" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.{zip}"
                 ],
                 [
                     path: { "${params.outdir}/trimgalore/logs" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.txt"
                 ],
                 [
                     path: { "${params.outdir}/trimgalore" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.fq.gz",
                     enabled: params.save_trimmed
                 ]
@@ -166,7 +166,7 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            mode: 'copy'
+            mode: params.publish_dir_mode
         ]
     }
 
@@ -174,7 +174,7 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -183,7 +183,7 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library/samtools_stats" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -200,7 +200,7 @@ if (params.aligner == 'bwa') {
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -214,7 +214,7 @@ if (params.aligner == 'bowtie2') {
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -228,7 +228,7 @@ if (params.aligner == 'chromap') {
             ext.args   = ''
             publishDir = [
                 path: { "${params.outdir}/genome/${params.aligner}/index" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -237,7 +237,7 @@ if (params.aligner == 'chromap') {
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -260,17 +260,17 @@ if (params.aligner == 'star') {
             publishDir = [
                 [
                     path: { "${params.outdir}/${params.aligner}/log" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: '*.{out,tab}'
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/library" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: '*.bam',
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/unmapped" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: '*.fastq.gz',
                     enabled: params.save_unaligned
                 ]
@@ -285,7 +285,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -296,12 +296,12 @@ process {
         publishDir = [
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 pattern: '*.metrics.txt'
             ],
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 pattern: '*.bam',
                 enabled: params.save_align_intermeds
             ]
@@ -312,7 +312,7 @@ process {
         ext.prefix = { "${meta.id}.mkD.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: '*.{bai,csi}'
         ]
     }
@@ -320,7 +320,7 @@ process {
     withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: '*.{stats,flagstat,idxstats}'
         ]
     }
@@ -329,7 +329,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.flT.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_align_intermeds
         ]
@@ -340,7 +340,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -349,7 +349,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: '*.{bai,csi}'
         ]
     }
@@ -358,7 +358,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: "*.bam"
         ]
     }
@@ -367,7 +367,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: "*.{stats,flagstat,idxstats}"
         ]
     }
@@ -376,7 +376,7 @@ process {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             pattern: "*.{out,pdf}"
         ]
     }
@@ -384,7 +384,7 @@ process {
     withName: 'MULTIQC_CUSTOM_PHANTOMPEAKQUALTOOLS' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -394,12 +394,12 @@ process {
         publishDir = [
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 pattern: "*.bigWig"
             ],
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig/scale" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 pattern: "*.txt"
             ]
         ]
@@ -410,7 +410,7 @@ process {
         publishDir = [
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 pattern: "*.bigWig"
             ]
         ]
@@ -425,12 +425,12 @@ if (!params.skip_picard_metrics) {
             publishDir = [
                 [
                     path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*_metrics"
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics/pdf" },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     pattern: "*.pdf"
                 ]
             ]
@@ -445,7 +445,7 @@ if (!params.skip_preseq) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/preseq" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -459,7 +459,7 @@ if (!params.skip_plot_profile) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotProfile" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -468,7 +468,7 @@ if (!params.skip_plot_profile) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotProfile" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -477,7 +477,7 @@ if (!params.skip_plot_profile) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotProfile" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -494,7 +494,7 @@ if (!params.skip_plot_fingerprint) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotFingerprint" },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -516,7 +516,7 @@ if (params.macs_gsize) {
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak'
                     ].join('') },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -540,7 +540,7 @@ if (params.macs_gsize) {
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/qc'
                 ].join('') },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
@@ -556,7 +556,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                     ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -569,7 +569,7 @@ if (params.macs_gsize) {
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -582,7 +582,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/qc'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -599,7 +599,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -612,7 +612,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -630,7 +630,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -652,7 +652,7 @@ if (params.macs_gsize) {
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus/deseq2'
                         ].join('') },
-                    mode: 'copy',
+                    mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -667,7 +667,7 @@ if (params.macs_gsize) {
                             "${params.outdir}/igv",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
-                        mode: 'copy',
+                        mode: params.publish_dir_mode,
                         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
@@ -684,7 +684,7 @@ if (!params.skip_multiqc) {
                             "${params.outdir}/multiqc",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
-                mode: 'copy',
+                mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
