--- a/conf/modules.config
+++ b/conf/modules.config
@@ -192,10 +192,11 @@ process {
 if (params.aligner == 'bwa') {
     process {
         withName: 'BWA_MEM' {
-            ext.args   = [
+            ext.args   = { [
                             '-M',
-                            params.bwa_min_score ? " -T ${params.bwa_min_score}" : ''
-                        ].join(' ').trim()
+                            params.bwa_min_score ? " -T ${params.bwa_min_score}" : '',
+                            meta.read_group ? "-R ${meta.read_group}": ''
+                        ].join(' ').trim() }
             ext.args2  = '-bhS -F 0x0100 -O BAM'
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
