Update phantompeakqualtools module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -374,7 +374,7 @@ process {
     }
 
     withName: 'PHANTOMPEAKQUALTOOLS' {
-        ext.args   = { "-p=$task.cpus" }
+        ext.args2  = { "-p=$task.cpus" }
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
