--- a/conf/modules.config
+++ b/conf/modules.config
@@ -292,7 +292,7 @@ process {
     }
 
     withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
-        ext.args   = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+        ext.args   = '--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
         publishDir = [
             [
