Is good to save changes before commiting

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -282,7 +282,7 @@ if (params.aligner == 'star') {
 
 process {
     withName: 'PICARD_MERGESAMFILES' {
-        ext.args   = 'SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+        ext.args   = '--SORT_ORDER coordinate --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
@@ -422,7 +422,7 @@ process {
 if (!params.skip_picard_metrics) {
     process {
         withName: 'PICARD_COLLECTMULTIPLEMETRICS' {
-            ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+            ext.args   = '--VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
             ext.prefix = { "${meta.id}.mLb.clN.sorted" }
             publishDir = [
                 [
