--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
       matrix:
         aligner:
           - "bowtie2"
-          - "chromap"
+          # - "chromap"
           - "star"
     steps:
       - name: Check out pipeline code
