Add deeptools plotfingerprint labels

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -489,10 +489,11 @@ if (!params.skip_plot_profile) {
 if (!params.skip_plot_fingerprint) {
     process {
         withName: 'DEEPTOOLS_PLOTFINGERPRINT' {
-            ext.args   = [
+            ext.args   = { [
                 '--skipZeros',
-                "--numberOfSamples $params.fingerprint_bins"
-            ].join(' ').trim()
+                "--numberOfSamples $params.fingerprint_bins",
+                "--labels $meta.ip $meta.control"
+            ].join(' ').trim() }
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotFingerprint" },
