Fix assignation of pvalue and qvalue for macs2 callpeak

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -511,8 +511,8 @@ if (params.macs_gsize) {
                 '--keep-dup all',
                 params.narrow_peak      ? '' : "--broad --broad-cutoff ${params.broad_cutoff}",
                 params.save_macs_pileup ? '--bdg --SPMR' : '',
-                params.macs_fdr         ? "--pvalue ${params.macs_pvalue}" : '',
-                params.macs_pvalue      ? "--qvalue ${params.macs_fdr}" : ''
+                params.macs_fdr         ? "--qvalue ${params.macs_fdr}" : '',
+                params.macs_pvalue      ? "--pvalue ${params.macs_pvalue}" : ''
             ].join(' ').trim()
             publishDir = [
                 path: { [
@@ -549,21 +549,8 @@ if (params.macs_gsize) {
         }
     }
 
-    if (!params.skip_peak_annotation && !params.skip_peak_qc) {
+    if (!params.skip_peak_annotation) {
         process {
-            withName: 'PLOT_MACS2_QC' {
-                ext.args   = '-o ./ -p macs2_peak'
-                publishDir = [
-                    path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                        '/qc'
-                    ].join('') },
-                    mode: params.publish_dir_mode,
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-                ]
-            }
-
             withName: 'HOMER_ANNOTATEPEAKS_MACS2' {
                 ext.args   = '-gid'
                 // ext.prefix = 'peaks'
@@ -576,18 +563,35 @@ if (params.macs_gsize) {
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
+        }
 
-            withName: 'PLOT_HOMER_ANNOTATEPEAKS' {
-                ext.args   = '-o ./ -p macs2_annotatePeaks'
-                publishDir = [
-                    path: { [
-                        "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                        '/qc'
+        if (!params.skip_peak_qc) {
+            process {
+                withName: 'PLOT_MACS2_QC' {
+                    ext.args   = '-o ./ -p macs2_peak'
+                    publishDir = [
+                        path: { [
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak',
+                            '/qc'
                         ].join('') },
-                    mode: params.publish_dir_mode,
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-                ]
+                        mode: params.publish_dir_mode,
+                        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                    ]
+                }
+
+                withName: 'PLOT_HOMER_ANNOTATEPEAKS' {
+                    ext.args   = '-o ./ -p macs2_annotatePeaks'
+                    publishDir = [
+                        path: { [
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak',
+                            '/qc'
+                            ].join('') },
+                        mode: params.publish_dir_mode,
+                        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                    ]
+                }
             }
         }
     }
