Move macs2_consensus "when" to modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -598,6 +598,7 @@ if (params.macs_gsize) {
     if (!params.skip_consensus_peaks) {
         process {
             withName: 'MACS2_CONSENSUS' {
+                ext.when   = { meta.multiple_groups || meta.replicates_exist }
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { [
