--- a/conf/test.config
+++ b/conf/test.config
@@ -23,12 +23,16 @@ params {
     input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
 
     // Genome references
-    fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
-    gtf   = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
+    genome = 'hg19'
+    // fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
+    // gtf   = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
 
     // Not mandatory but permits the pipeline to run through peak-calling steps
     macs_gsize = 1.2e7
 
     // For speed to avoid CI time-out
     fingerprint_bins = 100
+
+    // Avoid preseq errors with test data
+    skip_preseq = true
 }
