--- a/conf/test.config
+++ b/conf/test.config
@@ -23,9 +23,8 @@ params {
     input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
 
     // Genome references
-    genome = 'hg19'
-    // fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
-    // gtf   = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
+    fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
+    gtf   = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
 
     // Not mandatory but permits the pipeline to run through peak-calling steps
     macs_gsize = 1.2e7
