Updated  macs_gsize on igenomes and add a process to calculate it if not available

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,14 +20,12 @@ params {
     max_time = 6.h
 
     // Input data
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
+    input       = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
+    read_length = 50
 
     // Genome references
     fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
     gtf   = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
-
-    // Not mandatory but permits the pipeline to run through peak-calling steps
-    macs_gsize = 1.2e7
 
     // For speed to avoid CI time-out
     fingerprint_bins = 100
