--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     seq_center                 = null
     fragment_size              = 200
     fingerprint_bins           = 500000
+    read_length                = 100
 
     // References
     genome                     = null
@@ -40,7 +41,6 @@ params {
     // Options: Peaks
     narrow_peak                = false
     broad_cutoff               = 0.1
-    macs_gsize                 = null
     macs_fdr                   = null
     macs_pvalue                = null
     min_reps_consensus         = 1
