--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -46,8 +46,15 @@ params {
             bed12       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
             mito_name   = "MT"
-            macs_gsize  = "1.87e9"
+            // macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/v2.0/GRCm38-blacklist.v2.bed"
+            macs_gsize = [
+                "50"  : 2307679482,
+                "75"  : 2406655830,
+                "100" : 2466184610,
+                "150" : 2492306232,
+                "200" : 2519386924
+            ]
         }
         'TAIR10' {
             fasta       = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/WholeGenomeFasta/genome.fa"
@@ -90,7 +97,14 @@ params {
             gtf         = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
             mito_name   = "MtDNA"
-            macs_gsize  = "9e7"
+            // macs_gsize  = "9e7"
+            macs_gsize = [
+                "50"  : 95159402,
+                "75"  : 96945370,
+                "100" : 98259898,
+                "150" : 98721103,
+                "200" : 98672558
+            ]
         }
         'CanFam3.1' {
             fasta       = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Sequence/WholeGenomeFasta/genome.fa"
@@ -122,7 +136,14 @@ params {
             gtf         = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Annotation/Genes/genes.bed"
             mito_name   = "M"
-            macs_gsize  = "1.2e8"
+            // macs_gsize  = "1.2e8"
+            macs_gsize = [
+                "50" :  123519388,
+                "75" :  124886264,
+                "100" : 126807034,
+                "150" : 126903604,
+                "200" : 128575605
+            ]
         }
         'EquCab2' {
             fasta       = "${params.igenomes_base}/Equus_caballus/Ensembl/EquCab2/Sequence/WholeGenomeFasta/genome.fa"
@@ -226,7 +247,14 @@ params {
             gtf         = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
             mito_name   = "MT"
-            macs_gsize  = "1.2e7"
+            // macs_gsize  = "1.2e7"
+            macs_gsize = [
+                "50"  : 11624332,
+                "75"  : 11693438,
+                "100" : 11777680,
+                "150" : 11783749,
+                "200" : 11825681
+            ]
         }
         'EF2' {
             fasta       = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Sequence/WholeGenomeFasta/genome.fa"
@@ -238,7 +266,14 @@ params {
             bed12       = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Annotation/README.txt"
             mito_name   = "MT"
-            macs_gsize  = "1.21e7"
+            // macs_gsize  = "1.21e7"
+            macs_gsize = [
+                "50"  : 12190646,
+                "75"  : 12291456,
+                "100" : 12346649,
+                "150" : 12403911,
+                "200" : 12442064
+            ]
         }
         'Sbi1' {
             fasta       = "${params.igenomes_base}/Sorghum_bicolor/Ensembl/Sbi1/Sequence/WholeGenomeFasta/genome.fa"
@@ -280,8 +315,15 @@ params {
             gtf         = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            macs_gsize  = "2.7e9"
+            // macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v3.0/hg38-blacklist.v3.bed"
+            macs_gsize = [
+                "50"  : 2701262066,
+                "75"  : 2749859687,
+                "100" : 2805665311,
+                "150" : 2862089864,
+                "200" : 2892537351
+            ]
         }
         'hg19' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa"
@@ -293,8 +335,15 @@ params {
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
             mito_name   = "chrM"
-            macs_gsize  = "2.7e9"
+            // macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v1.0/hg19-blacklist.v1.bed"
+            macs_gsize = [
+                "50"  : 2684219875,
+                "75"  : 2733035409,
+                "100" : 2774803719,
+                "150" : 2824648687,
+                "200" : 2848794782
+            ]
         }
         'mm10' {
             fasta       = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa"
@@ -306,8 +355,15 @@ params {
             bed12       = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
             mito_name   = "chrM"
-            macs_gsize  = "1.87e9"
+            // macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/v2.0/mm10-blacklist.v2.bed"
+            macs_gsize = [
+                "50"  : 2307679482,
+                "75"  : 2406655830,
+                "100" : 2466184610,
+                "150" : 2492306232,
+                "200" : 2519386924
+            ]
         }
         'bosTau8' {
             fasta       = "${params.igenomes_base}/Bos_taurus/UCSC/bosTau8/Sequence/WholeGenomeFasta/genome.fa"
@@ -329,7 +385,14 @@ params {
             bed12       = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Annotation/README.txt"
             mito_name   = "chrM"
-            macs_gsize  = "9e7"
+            // macs_gsize  = "9e7"
+            macs_gsize = [
+                "50"  : 95156190,
+                "75"  : 96995949,
+                "100" : 98287299,
+                "150" : 98879728,
+                "200" : 98769409
+            ]
         }
         'canFam3' {
             fasta       = "${params.igenomes_base}/Canis_familiaris/UCSC/canFam3/Sequence/WholeGenomeFasta/genome.fa"
@@ -351,7 +414,14 @@ params {
             gtf         = "${params.igenomes_base}/Danio_rerio/UCSC/danRer10/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Danio_rerio/UCSC/danRer10/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            macs_gsize  = "1.37e9"
+            // macs_gsize  = "1.37e9"
+            macs_gsize = [
+                "50"  : 1172895610,
+                "75"  : 1229400206,
+                "100" : 1253908756,
+                "150" : 1285330773,
+                "200" : 1292538906
+            ]
         }
         'dm6' {
             fasta       = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Sequence/WholeGenomeFasta/genome.fa"
@@ -362,7 +432,14 @@ params {
             gtf         = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            macs_gsize  = "1.2e8"
+            // macs_gsize  = "1.2e8"
+            macs_gsize = [
+                "50"  : 123548253,
+                "75"  : 124886264,
+                "100" : 126807034,
+                "150" : 126908682,
+                "200" : 128599061
+            ]
         }
         'equCab2' {
             fasta       = "${params.igenomes_base}/Equus_caballus/UCSC/equCab2/Sequence/WholeGenomeFasta/genome.fa"
@@ -415,7 +492,14 @@ params {
             bismark     = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/BismarkIndex/"
             readme      = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Annotation/README.txt"
             mito_name   = "chrM"
-            macs_gsize  = "1.2e7"
+            // macs_gsize  = "1.2e7"
+            macs_gsize = [
+                "50"  : "11624332",
+                "75"  : "11693438",
+                "100" : "11777680",
+                "150" : "11783749",
+                "200" : "11825681"
+            ]
         }
         'susScr3' {
             fasta       = "${params.igenomes_base}/Sus_scrofa/UCSC/susScr3/Sequence/WholeGenomeFasta/genome.fa"
