Update previously existing macs_gsize with "read_length  hashes"

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -21,8 +21,14 @@ params {
             bed12       = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/README.txt"
             mito_name   = "MT"
-            macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v1.0/GRCh37-blacklist.v1.bed"
+            macs_gsize = [
+                "50" : 2684219875,
+                "75" : 2733035409,
+                "100" : 2774803719,
+                "150" : 2824648687,
+                "200" : 2848794782
+            ]
         }
         'GRCh38' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
@@ -33,8 +39,14 @@ params {
             gtf         = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v3.0/hg38-blacklist.v3.bed"
+            macs_gsize = [
+                "50"  : 2701262066,
+                "75"  : 2749859687,
+                "100" : 2805665311,
+                "150" : 2862089864,
+                "200" : 2892537351
+            ]
         }
         'GRCm38' {
             fasta       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/WholeGenomeFasta/genome.fa"
@@ -46,7 +58,6 @@ params {
             bed12       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
             mito_name   = "MT"
-            // macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/v2.0/GRCm38-blacklist.v2.bed"
             macs_gsize = [
                 "50"  : 2307679482,
@@ -97,7 +108,6 @@ params {
             gtf         = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
             mito_name   = "MtDNA"
-            // macs_gsize  = "9e7"
             macs_gsize = [
                 "50"  : 95159402,
                 "75"  : 96945370,
@@ -136,7 +146,6 @@ params {
             gtf         = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/Ensembl/BDGP6/Annotation/Genes/genes.bed"
             mito_name   = "M"
-            // macs_gsize  = "1.2e8"
             macs_gsize = [
                 "50" :  123519388,
                 "75" :  124886264,
@@ -247,7 +256,6 @@ params {
             gtf         = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
             mito_name   = "MT"
-            // macs_gsize  = "1.2e7"
             macs_gsize = [
                 "50"  : 11624332,
                 "75"  : 11693438,
@@ -266,7 +274,6 @@ params {
             bed12       = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Annotation/README.txt"
             mito_name   = "MT"
-            // macs_gsize  = "1.21e7"
             macs_gsize = [
                 "50"  : 12190646,
                 "75"  : 12291456,
@@ -315,7 +322,6 @@ params {
             gtf         = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            // macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v3.0/hg38-blacklist.v3.bed"
             macs_gsize = [
                 "50"  : 2701262066,
@@ -335,7 +341,6 @@ params {
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
             mito_name   = "chrM"
-            // macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/v1.0/hg19-blacklist.v1.bed"
             macs_gsize = [
                 "50"  : 2684219875,
@@ -355,7 +360,6 @@ params {
             bed12       = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
             mito_name   = "chrM"
-            // macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/v2.0/mm10-blacklist.v2.bed"
             macs_gsize = [
                 "50"  : 2307679482,
@@ -385,7 +389,6 @@ params {
             bed12       = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Annotation/README.txt"
             mito_name   = "chrM"
-            // macs_gsize  = "9e7"
             macs_gsize = [
                 "50"  : 95156190,
                 "75"  : 96995949,
@@ -414,7 +417,6 @@ params {
             gtf         = "${params.igenomes_base}/Danio_rerio/UCSC/danRer10/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Danio_rerio/UCSC/danRer10/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            // macs_gsize  = "1.37e9"
             macs_gsize = [
                 "50"  : 1172895610,
                 "75"  : 1229400206,
@@ -432,7 +434,6 @@ params {
             gtf         = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
-            // macs_gsize  = "1.2e8"
             macs_gsize = [
                 "50"  : 123548253,
                 "75"  : 124886264,
@@ -492,7 +493,6 @@ params {
             bismark     = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/BismarkIndex/"
             readme      = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Annotation/README.txt"
             mito_name   = "chrM"
-            // macs_gsize  = "1.2e7"
             macs_gsize = [
                 "50"  : "11624332",
                 "75"  : "11693438",
