Set read_length to null and exit when param not provided

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     seq_center                 = null
     fragment_size              = 200
     fingerprint_bins           = 500000
-    read_length                = 100
+    read_length                = null
 
     // References
     genome                     = null
